fix(input): fix autofill color for white theme and safari bug when input collapsing (#199)
* fixed autofill color for white theme and safari bug when input collapsing

* fix

--- a/src/input/fantasy/input.css
+++ b/src/input/fantasy/input.css
@@ -65,7 +65,9 @@
         display: inline-block;
         position: relative;
         width: 100%;
-        height: 100%;
+
+        /** safari fix. Если использовать height: 100% поле схлопывается **/
+        min-height: 100%;
         margin: 0;
         padding: 0;
         outline: none;
@@ -107,8 +109,6 @@
         &:-webkit-autofill:hover,
         &:-webkit-autofill:focus,
         &:-webkit-autofill:after {
-            -webkit-text-fill-color: #fff !important;
-
             /* Hack from http://stackoverflow.com/a/29350537 */
             transition: background-color 5000s ease-in-out 0s;
         }
